@@ -45,6 +45,7 @@ EXTRA_DIST = 					\
 	test_component_bouncers_plug.py		\
 	test_component_feeder.py		\
 	test_component_feed.py			\
+	test_component_feedcomponent.py     \
 	test_component_httpserver.py		\
 	test_component_httpstreamer.py		\
 	test_component_init.py			\
